# rust_taxonomy

./: .editorconfig  .env  .gitignore  Cargo.toml  README.md  diesel.toml  rustfmt.toml
k6/: performance_get.js  performance_list.js
resources/: logging.yaml
src/: main.rs
src/taxonomy/: mod.rs
src/taxonomy/api/: error_handler.rs  mod.rs  request.rs  response.rs  routes.rs
src/taxonomy/dao/: dao.rs  mod.rs  schema.rs
src/taxonomy/init/: db.rs  mod.rs
src/taxonomy/model/: common.rs  database_models.rs  errorcode.rs  mod.rs  schema.rs  validation.rs
src/taxonomy/service/: mod.rs  taxonomy.rs
