[package]
name = "rust_taxonomy"
version = "0.1.0"
edition = "2021"
authors = ["Kjetil Fjellheim"]

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = { version = "0.15.0" }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel-tracing = { version = "0.1.6", features = ["postgres"] }
lazy_static = "1.4.0"
listenfd = "1.0.1"
serde = { version = "1.0.96", features = ["derive"]}
serde_json = "1.0.96"
r2d2 = "0.8.10"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
futures-util = "0.3"
log4rs = "1.2.0"
log = "0.4.18"
