[package]
name = "rust_taxonomy"
version = "0.1.0"
edition = "2021"
authors = ["Kjetil Fjellheim"]

[dependencies]
actix-web = "4.3.1" #Web framework for the apis
actix-rt = "2.8.0" #Web framework for the apis
chrono = { version = "0.4.26", features = ["serde"] } #Timemanagement used by serde
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid", "chrono"] } #Database framework
lazy_static = "1.4.0" #Used for storing the connection pool
serde = { version = "1.0.96", features = ["derive"]} #Used for conversion of response/request objects
serde_json = "1.0.96" #Used for conversion of response/request objects
r2d2 = "0.8.10" #Database connection pool
log4rs = "1.2.0" #Logging framework
log = "0.4.18" #Required for logging
prometheus = "0.13.3" #For prometheus monitoring
actix-web-prom = "0.6.0" #For prometheus monitoring
systemstat = "0.2.3" #For monitoring cpu and memory usage
dotenv = "0.15.0" #For getting application configuration
